fixed names in 1 and 3 task

--- a/Task1/index.html
+++ b/Task1/index.html
@@ -44,7 +44,7 @@
 						</select>
 					</div>
 					<div class="col-md-6 col-padding-custom">
-						<input class="" type="text" placeholder="What are you looking?">
+						<input type="text" placeholder="What are you looking?">
 					</div>
 					<div class="col-md-3 col-padding-custom">
 						<select class="select select--rubric">
@@ -70,8 +70,8 @@
 			<div class="left-block">
 				<div class="grid">
 					<div class="grid__item">
-						<div href="" class="product-block product-block--yellow-bg">
-							<div class="product-block--padding black-txt">
+						<div class="product product-yellow">
+							<div class="product-padding black-txt">
 								<img src="img/rangerover.png" alt="">
 								<h4><a href="">Lorem ipsum dolor sit amet</a></h4>
 								<p>
@@ -79,8 +79,8 @@
 									eiusmod tempor incididunt ut labore et dolore magna aliqua.
 								</p>
 							</div>
-							<div class="product-block__footer">
-								<div class="product-block--padding">
+							<div class="product-footer">
+								<div class="product-padding">
 									<p class="pagination"><a href="">Cars</a> » <a href="">Honda</a></p>
 									<p class="bold">Today, 11:15am</p>
 								</div>
@@ -88,16 +88,16 @@
 						</div>
 					</div>
 					<div class="grid__item">
-						<div class="product-block">
-							<div class="product-block--padding black-txt">
+						<div class="product">
+							<div class="product-padding black-txt">
 								<h4><a href="">Lorem ipsum dolor sit amet</a></h4>
 								<p>
 									Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
 									eiusmod tempor incididunt ut
 								</p>
 							</div>
-							<div class="product-block__footer">
-								<div class="product-block--padding">
+							<div class="product-footer">
+								<div class="product-padding">
 									<p class="pagination"><a href="">Cars</a> » <a href="">Honda</a></p>
 									<p class="bold">Today, 11:15am</p>
 								</div>
@@ -105,16 +105,16 @@
 						</div>
 					</div>
 					<div class="grid__item">
-						<div class="product-block">
-							<div class="product-block--padding black-txt">
+						<div class="product">
+							<div class="product-padding black-txt">
 								<h4><a href="">Lorem ipsum dolor sit amet</a></h4>
 								<p>
 									Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
 									eiusmod tempor incididunt ut labore
 								</p>
 							</div>
-							<div class="product-block__footer">
-								<div class="product-block--padding">
+							<div class="product-footer">
+								<div class="product-padding">
 									<p class="pagination"><a href="">Cars</a> » <a href="">Honda</a></p>
 									<p class="bold">Today, 11:15am</p>
 								</div>
@@ -122,8 +122,8 @@
 						</div>
 					</div>
 					<div class="grid__item grid__item--width2">
-						<div class="product-block">
-							<div class="product-block--padding black-txt">
+						<div class="product">
+							<div class="product-padding black-txt">
 								<img src="img/mazeratti.png" alt="">
 								<h4><a href="">Lorem ipsum dolor sit amet</a></h4>
 								<p>
@@ -131,8 +131,8 @@
 									eiusmod tempor incididunt ut labore et dolore magna aliqua.
 								</p>
 							</div>
-							<div class="product-block__footer">
-								<div class="product-block--padding">
+							<div class="product-footer">
+								<div class="product-padding">
 									<p class="pagination"><a href="">Cars</a> » <a href="">Honda</a></p>
 									<p class="bold">Today, 11:15am</p>
 								</div>
@@ -140,8 +140,8 @@
 						</div>
 					</div>
 					<div class="grid__item">
-						<div href="" class="product-block">
-							<div class="product-block--padding black-txt">
+						<div class="product">
+							<div class="product-padding black-txt">
 								<div class="tabs">
 									<div class="tabs-box" data-tabs-panels="first">
 										<div class="tabs-item active">
@@ -174,8 +174,8 @@
 									quibusdam cum doloribus suscipit rerum. Obcaecati impedit
 								</p>
 							</div>
-							<div class="product-block__footer">
-								<div class="product-block--padding">
+							<div class="product-footer">
+								<div class="product-padding">
 									<p class="pagination"><a href="">Cars</a> » <a href="">Honda</a></p>
 									<p class="bold">Today, 11:15am</p>
 								</div>
@@ -183,8 +183,8 @@
 						</div>
 					</div>
 					<div class="grid__item">
-						<div class="product-block">
-							<div class="product-block--padding black-txt">
+						<div class="product">
+							<div class="product-padding black-txt">
 								<img src="img/rangerover.png" alt="">
 								<h4><a href="">Lorem ipsum dolor sit amet</a></h4>
 								<p>
@@ -192,8 +192,8 @@
 									eiusmod tempor incididunt ut
 								</p>
 							</div>
-							<div class="product-block__footer">
-								<div class="product-block--padding">
+							<div class="product-footer">
+								<div class="product-padding">
 									<p class="pagination"><a href="">Cars</a> » <a href="">Honda</a></p>
 									<p class="bold">Today, 11:15am</p>
 								</div>
@@ -201,8 +201,8 @@
 						</div>
 					</div>
 					<div class="grid__item">
-						<div class="product-block">
-							<div class="product-block--padding black-txt">
+						<div class="product">
+							<div class="product-padding black-txt">
 								<h4><a href="">Lorem ipsum dolor sit amet</a></h4>
 								<p>
 									Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
@@ -210,8 +210,8 @@
 									eiusmod tempor incididunt ut
 								</p>
 							</div>
-							<div class="product-block__footer">
-								<div class="product-block--padding">
+							<div class="product-footer">
+								<div class="product-padding">
 									<p class="pagination"><a href="">Cars</a> » <a href="">Honda</a></p>
 									<p class="bold">Today, 11:15am</p>
 								</div>
@@ -219,8 +219,8 @@
 						</div>
 					</div>
 					<div class="grid__item">
-						<div href="" class="product-block product-block--yellow-bg">
-							<div class="product-block--padding black-txt">
+						<div class="product product-yellow">
+							<div class="product-padding black-txt">
 								<img src="img/rangerover.png" alt="">
 								<h4><a href="">Lorem ipsum dolor sit amet</a></h4>
 								<p>
@@ -228,8 +228,8 @@
 									eiusmod tempor incididunt ut labore et dolore magna aliqua.
 								</p>
 							</div>
-							<div class="product-block__footer">
-								<div class="product-block--padding">
+							<div class="product-footer">
+								<div class="product-padding">
 									<p class="pagination"><a href="">Cars</a> » <a href="">Honda</a></p>
 									<p class="bold">Today, 11:15am</p>
 								</div>
@@ -237,16 +237,16 @@
 						</div>
 					</div>
 					<div class="grid__item">
-						<div class="product-block">
-							<div class="product-block--padding black-txt">
+						<div class="product">
+							<div class="product-padding black-txt">
 								<h4><a href="">Lorem ipsum dolor sit amet</a></h4>
 								<p>
 									Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
 									eiusmod tempor incididunt ut
 								</p>
 							</div>
-							<div class="product-block__footer">
-								<div class="product-block--padding">
+							<div class="product-footer">
+								<div class="product-padding">
 									<p class="pagination"><a href="">Cars</a> » <a href="">Honda</a></p>
 									<p class="bold">Today, 11:15am</p>
 								</div>
@@ -254,16 +254,16 @@
 						</div>
 					</div>
 					<div class="grid__item">
-						<div class="product-block">
-							<div class="product-block--padding black-txt">
+						<div class="product">
+							<div class="product-padding black-txt">
 								<h4><a href="">Lorem ipsum dolor sit amet</a></h4>
 								<p>
 									Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
 									eiusmod tempor incididunt ut labore
 								</p>
 							</div>
-							<div class="product-block__footer">
-								<div class="product-block--padding">
+							<div class="product-footer">
+								<div class="product-padding">
 									<p class="pagination"><a href="">Cars</a> » <a href="">Honda</a></p>
 									<p class="bold">Today, 11:15am</p>
 								</div>
@@ -271,8 +271,8 @@
 						</div>
 					</div>
 					<div class="grid__item grid__item--width2">
-						<div class="product-block">
-							<div class="product-block--padding black-txt">
+						<div class="product">
+							<div class="product-padding black-txt">
 								<img src="img/mazeratti.png" alt="">
 								<h4><a href="">Lorem ipsum dolor sit amet</a></h4>
 								<p>
@@ -280,8 +280,8 @@
 									eiusmod tempor incididunt ut labore et dolore magna aliqua.
 								</p>
 							</div>
-							<div class="product-block__footer">
-								<div class="product-block--padding">
+							<div class="product-footer">
+								<div class="product-padding">
 									<p class="pagination"><a href="">Cars</a> » <a href="">Honda</a></p>
 									<p class="bold">Today, 11:15am</p>
 								</div>
@@ -289,8 +289,8 @@
 						</div>
 					</div>
 					<div class="grid__item">
-						<div href="" class="product-block">
-							<div class="product-block--padding black-txt">
+						<div class="product">
+							<div class="product-padding black-txt">
 								<div class="tabs">
 									<div class="tabs-box" data-tabs-panels="first">
 										<div class="tabs-item active">
@@ -323,8 +323,8 @@
 									quibusdam cum doloribus suscipit rerum. Obcaecati impedit
 								</p>
 							</div>
-							<div class="product-block__footer">
-								<div class="product-block--padding">
+							<div class="product-footer">
+								<div class="product-padding">
 									<p class="pagination"><a href="">Cars</a> » <a href="">Honda</a></p>
 									<p class="bold">Today, 11:15am</p>
 								</div>
@@ -332,16 +332,16 @@
 						</div>
 					</div>
 					<div class="grid__item">
-						<div class="product-block">
-							<div class="product-block--padding black-txt">
+						<div class="product">
+							<div class="product-padding black-txt">
 								<h4><a href="">Lorem ipsum dolor sit amet</a></h4>
 								<p>
 									Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
 									eiusmod tempor incididunt ut labore
 								</p>
 							</div>
-							<div class="product-block__footer">
-								<div class="product-block--padding">
+							<div class="product-footer">
+								<div class="product-padding">
 									<p class="pagination"><a href="">Cars</a> » <a href="">Honda</a></p>
 									<p class="bold">Today, 11:15am</p>
 								</div>
@@ -349,8 +349,8 @@
 						</div>
 					</div>
 					<div class="grid__item grid__item--width2">
-						<div class="product-block">
-							<div class="product-block--padding black-txt">
+						<div class="product">
+							<div class="product-padding black-txt">
 								<img src="img/mazeratti.png" alt="">
 								<h4><a href="">Lorem ipsum dolor sit amet</a></h4>
 								<p>
@@ -358,8 +358,8 @@
 									eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor
 								</p>
 							</div>
-							<div class="product-block__footer">
-								<div class="product-block--padding">
+							<div class="product-footer">
+								<div class="product-padding">
 									<p class="pagination"><a href="">Cars</a> » <a href="">Honda</a></p>
 									<p class="bold">Today, 11:15am</p>
 								</div>
@@ -367,8 +367,8 @@
 						</div>
 					</div>
 					<div class="grid__item">
-						<div href="" class="product-block">
-							<div class="product-block--padding black-txt">
+						<div class="product">
+							<div class="product-padding black-txt">
 								<div class="tabs">
 									<div class="tabs-box" data-tabs-panels="second">
 										<div class="tabs-item active">
@@ -406,8 +406,8 @@
 									quibusdam cum doloribus suscipit rerum.
 								</p>
 							</div>
-							<div class="product-block__footer">
-								<div class="product-block--padding">
+							<div class="product-footer">
+								<div class="product-padding">
 									<p class="pagination"><a href="">Cars</a> » <a href="">Honda</a></p>
 									<p class="bold">Today, 11:15am</p>
 								</div>
@@ -417,13 +417,13 @@
 				</div>
 			</div>
 			<div class="right-block">
-				<div class="banner-block"><a href=""><img src="img/banner-1.png" alt=""></a></div>
-				<div class="banner-block"><a href=""><img src="img/banner-2.png" alt=""></a></div>
-				<div class="banner-block"><a href=""><img src="img/banner-3.png" alt=""></a></div>
-				<div class="banner-block"><a href=""><img src="img/banner-4.png" alt=""></a></div>
-				<div class="banner-block"><a href=""><img src="img/banner-5.png" alt=""></a></div>
-				<div class="banner-block"><a href=""><img src="img/banner-1.png" alt=""></a></div>
-				<div class="banner-block"><a href=""><img src="img/banner-2.png" alt=""></a></div>
+				<div class="banner"><a href=""><img src="img/banner-1.png" alt=""></a></div>
+				<div class="banner"><a href=""><img src="img/banner-2.png" alt=""></a></div>
+				<div class="banner"><a href=""><img src="img/banner-3.png" alt=""></a></div>
+				<div class="banner"><a href=""><img src="img/banner-4.png" alt=""></a></div>
+				<div class="banner"><a href=""><img src="img/banner-5.png" alt=""></a></div>
+				<div class="banner"><a href=""><img src="img/banner-1.png" alt=""></a></div>
+				<div class="banner"><a href=""><img src="img/banner-2.png" alt=""></a></div>
 			</div>
 		</div>
 	</div>
