--- a/Task3/index.html
+++ b/Task3/index.html
@@ -34,7 +34,7 @@
 				<div class="col-md-9">
 					<div class="blog-head clearfix">
 						<div class="blog-head-left pull-left">
-							<a href="" class="blog-head-link active head-link_count">Overview</a>
+							<a href="" class="blog-head-link active link-count">Overview</a>
 							<a href="" class="blog-head-link">Time Offs</a>
 							<a href="" class="blog-head-link">Purchases</a>
 							<a href="" class="blog-head-link">Employees</a>
@@ -51,20 +51,20 @@
 							<section class="user clearfix user--background-mod">
 								<div class="user-avatar">
 									<a href="#dropdown1" class="dropdown-trigger user-avatar__link"><img src="img/avatar-1.png" alt=""></a>
-									<div id="dropdown1" class="dropdown-block">
+									<div id="dropdown1" class="info-block dropdown">
 										<div class="position">manager</div>
-										<div class="dropdown-block-info">
-											<div class="dropdown-block-info__top clearfix">
-												<div class="dropdown-block-info__left pull-left">
-													<div class="dropdown-block-info__days">10 days left</div>
-													<div class="dropdown-block-info__days">13 days pending</div>
-													<div class="dropdown-block-info__days">3 days rejected</div>
+										<div class="dropdown-info">
+											<div class="dropdown-info__top clearfix">
+												<div class="dropdown-info__left pull-left">
+													<div class="dropdown-info__days">10 days left</div>
+													<div class="dropdown-info__days">13 days pending</div>
+													<div class="dropdown-info__days">3 days rejected</div>
 												</div>
-												<div class="dropdown-block-info__right pull-right">
+												<div class="dropdown-info__right pull-right">
 													<div class="product-block-info__count">3/5</div>
 												</div>
 											</div>
-											<div class="dropdown-block-info__bottom">
+											<div class="dropdown-info__bottom">
 												<a href="">last activity 12 days ago</a>
 												<a href="">users time off</a>
 												<a href="">todo list</a>
@@ -93,20 +93,20 @@
 							<section class="user clearfix border-bottom-none">
 								<div class="user-avatar">
 									<a href="#dropdown2" class="dropdown-trigger user-avatar__link"><img src="img/avatar-2.png" alt=""></a>
-									<div id="dropdown2" class="dropdown-block">
+									<div id="dropdown2" class="info-block dropdown">
 										<div class="position">manager</div>
-										<div class="dropdown-block-info">
-											<div class="dropdown-block-info__top clearfix">
-												<div class="dropdown-block-info__left pull-left">
-													<div class="dropdown-block-info__days">10 days left</div>
-													<div class="dropdown-block-info__days">13 days pending</div>
-													<div class="dropdown-block-info__days">3 days rejected</div>
+										<div class="dropdown-info">
+											<div class="dropdown-info__top clearfix">
+												<div class="dropdown-info__left pull-left">
+													<div class="dropdown-info__days">10 days left</div>
+													<div class="dropdown-info__days">13 days pending</div>
+													<div class="dropdown-info__days">3 days rejected</div>
 												</div>
-												<div class="dropdown-block-info__right pull-right">
+												<div class="dropdown-info__right pull-right">
 													<div class="product-block-info__count">3/5</div>
 												</div>
 											</div>
-											<div class="dropdown-block-info__bottom">
+											<div class="dropdown-info__bottom">
 												<a href="">last activity 12 days ago</a>
 												<a href="">users time off</a>
 												<a href="">todo list</a>
@@ -138,20 +138,20 @@
 							<section class="user clearfix user--background-mod">
 								<div class="user-avatar">
 									<a href="#dropdown3" class="dropdown-trigger user-avatar__link"><img src="img/avatar-1.png" alt=""></a>
-									<div id="dropdown3" class="dropdown-block">
+									<div id="dropdown3" class="info-block dropdown">
 										<div class="position">manager</div>
-										<div class="dropdown-block-info">
-											<div class="dropdown-block-info__top clearfix">
-												<div class="dropdown-block-info__left pull-left">
-													<div class="dropdown-block-info__days">10 days left</div>
-													<div class="dropdown-block-info__days">13 days pending</div>
-													<div class="dropdown-block-info__days">3 days rejected</div>
+										<div class="dropdown-info">
+											<div class="dropdown-info__top clearfix">
+												<div class="dropdown-info__left pull-left">
+													<div class="dropdown-info__days">10 days left</div>
+													<div class="dropdown-info__days">13 days pending</div>
+													<div class="dropdown-info__days">3 days rejected</div>
 												</div>
-												<div class="dropdown-block-info__right pull-right">
+												<div class="dropdown-info__right pull-right">
 													<div class="product-block-info__count">3/5</div>
 												</div>
 											</div>
-											<div class="dropdown-block-info__bottom">
+											<div class="dropdown-info__bottom">
 												<a href="">last activity 12 days ago</a>
 												<a href="">users time off</a>
 												<a href="">todo list</a>
@@ -179,20 +179,20 @@
 							<section class="user clearfix">
 								<div class="user-avatar">
 									<a href="#dropdown4" class="dropdown-trigger user-avatar__link"><img src="img/avatar-3.png" alt=""></a>
-									<div id="dropdown4" class="dropdown-block">
+									<div id="dropdown4" class="info-block dropdown">
 										<div class="position">manager</div>
-										<div class="dropdown-block-info">
-											<div class="dropdown-block-info__top clearfix">
-												<div class="dropdown-block-info__left pull-left">
-													<div class="dropdown-block-info__days">10 days left</div>
-													<div class="dropdown-block-info__days">13 days pending</div>
-													<div class="dropdown-block-info__days">3 days rejected</div>
+										<div class="dropdown-info">
+											<div class="dropdown-info__top clearfix">
+												<div class="dropdown-info__left pull-left">
+													<div class="dropdown-info__days">10 days left</div>
+													<div class="dropdown-info__days">13 days pending</div>
+													<div class="dropdown-info__days">3 days rejected</div>
 												</div>
-												<div class="dropdown-block-info__right pull-right">
+												<div class="dropdown-info__right pull-right">
 													<div class="product-block-info__count">3/5</div>
 												</div>
 											</div>
-											<div class="dropdown-block-info__bottom">
+											<div class="dropdown-info__bottom">
 												<a href="">last activity 12 days ago</a>
 												<a href="">users time off</a>
 												<a href="">todo list</a>
@@ -230,20 +230,20 @@
 							<section class="user clearfix">
 								<div class="user-avatar">
 									<a href="#dropdown5" class="dropdown-trigger user-avatar__link"><img src="img/avatar-3.png" alt=""></a>
-									<div id="dropdown5" class="dropdown-block">
+									<div id="dropdown5" class="info-block dropdown">
 										<div class="position">manager</div>
-										<div class="dropdown-block-info">
-											<div class="dropdown-block-info__top clearfix">
-												<div class="dropdown-block-info__left pull-left">
-													<div class="dropdown-block-info__days">10 days left</div>
-													<div class="dropdown-block-info__days">13 days pending</div>
-													<div class="dropdown-block-info__days">3 days rejected</div>
+										<div class="dropdown-info">
+											<div class="dropdown-info__top clearfix">
+												<div class="dropdown-info__left pull-left">
+													<div class="dropdown-info__days">10 days left</div>
+													<div class="dropdown-info__days">13 days pending</div>
+													<div class="dropdown-info__days">3 days rejected</div>
 												</div>
-												<div class="dropdown-block-info__right pull-right">
+												<div class="dropdown-info__right pull-right">
 													<div class="product-block-info__count">3/5</div>
 												</div>
 											</div>
-											<div class="dropdown-block-info__bottom">
+											<div class="dropdown-info__bottom">
 												<a href="">last activity 12 days ago</a>
 												<a href="">users time off</a>
 												<a href="">todo list</a>
@@ -277,20 +277,20 @@
 							<section class="user-last clearfix border-bottom-none">
 								<div class="user-avatar">
 									<a href="#dropdown6" class="dropdown-trigger user-avatar__link"><img src="img/avatar-4.png" alt=""></a>
-									<div id="dropdown6" class="dropdown-block">
+									<div id="dropdown6" class="info-block dropdown">
 										<div class="position">manager</div>
-										<div class="dropdown-block-info">
-											<div class="dropdown-block-info__top clearfix">
-												<div class="dropdown-block-info__left pull-left">
-													<div class="dropdown-block-info__days">10 days left</div>
-													<div class="dropdown-block-info__days">13 days pending</div>
-													<div class="dropdown-block-info__days">3 days rejected</div>
+										<div class="dropdown-info">
+											<div class="dropdown-info__top clearfix">
+												<div class="dropdown-info__left pull-left">
+													<div class="dropdown-info__days">10 days left</div>
+													<div class="dropdown-info__days">13 days pending</div>
+													<div class="dropdown-info__days">3 days rejected</div>
 												</div>
-												<div class="dropdown-block-info__right pull-right">
+												<div class="dropdown-info__right pull-right">
 													<div class="product-block-info__count">3/5</div>
 												</div>
 											</div>
-											<div class="dropdown-block-info__bottom">
+											<div class="dropdown-info__bottom">
 												<a href="">last activity 12 days ago</a>
 												<a href="">users time off</a>
 												<a href="">todo list</a>
